--- a/.github/workflows/tomcat_image.yml
+++ b/.github/workflows/tomcat_image.yml
@@ -37,10 +37,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
         
-        
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: docker_nodejs_demo
+          IMAGE_TAG: nodejs_demo_image
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG  
+
+
