--- a/.github/workflows/tomcat_image.yml
+++ b/.github/workflows/tomcat_image.yml
@@ -38,7 +38,11 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         
       - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: tomcat-repo
+          IMAGE_TAG: latest
         run: |
-          docker build -t public.ecr.aws/i6b6v3j1/tomcat-repo:latest .
-          docker push public.ecr.aws/i6b6v3j1/tomcat-repo:latest
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
