--- a/.github/workflows/tomcat_image.yml
+++ b/.github/workflows/tomcat_image.yml
@@ -39,7 +39,7 @@ jobs:
         
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: public.ecr.aws/i6b6v3j1
           ECR_REPOSITORY: tomcat-repo
           IMAGE_TAG: latest
         run: |
